--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,13 @@
-name: Create Release
+name: Build And Release
 
 on:
   push:
+    branches:
+      - main
     tags:
       - 'v*'
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
@@ -26,7 +30,7 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up MSYS2 for Windows
       if: matrix.os == 'windows-latest'
@@ -46,64 +50,50 @@ jobs:
       if: matrix.os != 'windows-latest'
       run: make
 
+    - name: Prepare artifact (Unix)
+      if: matrix.os != 'windows-latest'
+      run: |
+        mkdir -p dist
+        cp "./${{ matrix.target_name }}" "./dist/${{ matrix.asset_name }}"
+
+    - name: Prepare artifact (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: msys2 {0}
+      run: |
+        mkdir -p dist
+        cp "./${{ matrix.target_name }}" "./dist/${{ matrix.asset_name }}"
+
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.asset_name }}
-        path: ./${{ matrix.target_name }}
+        path: ./dist/${{ matrix.asset_name }}
+        if-no-files-found: error
 
   create-release:
     name: Create GitHub Release
+    if: startsWith(github.ref, 'refs/tags/v')
     needs: build
     runs-on: ubuntu-latest
     permissions:
-      contents: write # Required to create a release
+      contents: write
 
     steps:
-    - name: Get tag name
-      id: get_tag
-      run: echo "TAG_NAME=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
-
     - name: Download all artifacts
-      uses: actions/download-artifact@v3
+      uses: actions/download-artifact@v4
       with:
         path: artifacts/
 
     - name: List artifacts
       run: ls -R artifacts
 
-    - name: Create Release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Publish release assets
+      uses: softprops/action-gh-release@v2
       with:
-        tag_name: ${{ env.TAG_NAME }}
-        release_name: Release ${{ env.TAG_NAME }}
-        body: "Automated release of binaries for version ${{ env.TAG_NAME }}."
-        draft: false
-        prerelease: false
-
-    - name: Upload Linux Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/dedup-linux/dedup
-        asset_name: dedup-linux
-        asset_content_type: application/octet-stream
-
-    - name: Upload macOS Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/dedup-macos/dedup
-        asset_name: dedup-macos
-        asset_content_type: application/octet-stream
-
-    - name: Upload Windows Asset
-      uses: actions/upload-release-asset@v1
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./artifacts/dedup-windows.exe/dedup.exe
-        asset_name: dedup-windows.exe
-        asset_content_type: application/vnd.microsoft.portable-executable
+        name: Release ${{ github.ref_name }}
+        tag_name: ${{ github.ref_name }}
+        generate_release_notes: true
+        files: |
+          artifacts/dedup-linux/dedup-linux
+          artifacts/dedup-macos/dedup-macos
+          artifacts/dedup-windows.exe/dedup-windows.exe
