--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,6 +41,7 @@ jobs:
         update: true
         install: >-
           mingw-w64-x86_64-gcc
+          make
 
     - name: Compile
       shell: msys2 {0}
